# il-jukebox

./: README.md
src/: COPYING  Makefile.in  README  configure  configure.in
src/doc/: Makefile.am  Makefile.in  THANKS  doxygen.conf  jukebox.conf.sample  jukebox.mysql.sql  jukebox.pgsql.sql  jukebox.sqlite.sql  jukectl.conf.sample
src/src/: Makefile.am  Makefile.in  album.cc  album.h  artist.cc  artist.h  client.cc  client.h  collection.cc  collection.h  config.cc  config.h  ident.cc  ident.h  jukebox.h  jukectl.cc  jukectl.h  main.cc  player.cc  player.h  queue.cc  queue.h  scan.cc  server.cc  server.h  track.cc  track.h  user.h  user_ldap.cc  user_ldap.h  user_sql.cc  user_sql.h  vcedit.c  vcedit.h  volume.cc  volume.h
